<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonationActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="अँप विषयी थोडक्यात "
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/heading"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
        android:text="@string/first"

        android:textSize="16sp"
        android:textStyle="normal" />
        <TextView
            android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second"
      android:layout_marginStart="15dp"
        android:textSize="16sp"
        android:textStyle="normal" />
        <TextView
            android:layout_marginTop="10dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third"
android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third1"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third2"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third3"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third4"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third5"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third6"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourth"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="* अटी  लागू "
            android:textColor="#ff0505"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>
</ScrollView>